# cabal-query

./: LICENSE  cabal-query.cabal
src/: Main.hs  TH.hs  test.hs
src/Distribution/: Query.hs
src/Distribution/Query/: TH.hs  Types.hs
