name:           cabal-query
version:        0.0
copyright:      Max Desyatov
category:       System
maintainer:     Max Desyatov <explicitcall at gmail.com>
author:         Max Desyatov
license:        BSD3
license-file:   LICENSE
build-depends:  base >= 4, mtl, template-haskell, derive, language-c, Cabal,
                MissingH, uniplate, bytestring, tar, DebugTraceHelpers, stream-fusion
synopsis:       cabal-query
Stability:      Experimental
Build-type:     Simple
executable:     cabal-query
main-is:        Main.hs
ghc-options:    -Wall -fno-warn-orphans -O
hs-source-dirs: src
